--- a/eat.Rmd
+++ b/eat.Rmd
@@ -28,14 +28,16 @@ require(tigerstats)
 require(knitr)
 require(foreign)
 ```
-```{r, eval=FALSE}
-GSS <-read.dta(file="GSSxxxx.dta")
+```{r, eval=TRUE}
+GSS <-read.dta(file="GSS1996.dta")
 GSS <- droplevels(GSS)
 mydata <- select(GSS,race,age,eatout)
 mydata <- na.omit(mydata)
 ```
 
+## Methods
 
+We will be using the Cat Cat helper file to analyze the two categorical factors Race and the frequency at which they eat out. In order to determine if there is a statistical difference among the various races and the frequency at which they eat out. Additionally, we will use graphical, numerical, and inferential methods to determine if there is a statistical difference between at least two of the races regarding the frequency at which they eat out.
 
 
 
